# cocl-operator

./: .gitignore  Cargo.toml  Containerfile  Makefile  PROJECT  README.md  REUSE.toml  go.mod  go.sum  renovate.json
.github/: dependabot.yml
.github/workflows/: cocl_basic_ci.yaml  go.yml  lint.yml  rust.yml  tests.yml
.tekton/: cocl-compute-pcrs-pull-request.yaml  cocl-compute-pcrs-push.yaml  cocl-operator-b0fc8-pull-request.yaml  cocl-operator-b0fc8-push.yaml  cocl-operator-bundle-pull-request.yaml  cocl-operator-bundle-push.yaml  cocl-operator-operator-pull-request.yaml  cocl-operator-operator-push.yaml  cocl-operator-pull-request.yaml  cocl-operator-push.yaml  cocl-register-server-pull-request.yaml  cocl-register-server-push.yaml
api/: cocl-gen.go  trusted-cluster-gen.go
api/v1alpha1/: conditions.go  crds.go
bundle/: Containerfile  Dockerfile
bundle/manifests/: cocl-operator.clusterserviceversion.yaml  confidential-clusters.io_confidentialclusters.yaml  confidential-clusters.io_machines.yaml  trusted-execution-clusters-operator.clusterserviceversion.yaml  trusted-execution-clusters.io_machines.yaml  trusted-execution-clusters.io_trustedexecutionclusters.yaml
bundle/metadata/: annotations.yaml
compute-pcrs/: Cargo.toml  Containerfile
compute-pcrs/src/: lib.rs  main.rs
config/rbac/: approvedimage_admin_role.yaml  approvedimage_editor_role.yaml  approvedimage_viewer_role.yaml  confidentialcluster_admin_role.yaml  confidentialcluster_editor_role.yaml  confidentialcluster_viewer_role.yaml  kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  machine_admin_role.yaml  machine_editor_role.yaml  machine_viewer_role.yaml  metrics_auth_role.yaml  metrics_auth_role_binding.yaml  metrics_reader_role.yaml  role_binding.yaml  service_account.yaml  trustedexecutioncluster_admin_role.yaml  trustedexecutioncluster_editor_role.yaml  trustedexecutioncluster_viewer_role.yaml
crds/: Cargo.toml
crds/src/: conditions.rs  lib.rs
demo-azure/: README.md  common.sh  demo-ignition.json  demo-machineset.yaml  install-demo.sh  push-images.sh  uninstall.sh
demo-azure/manifests/: confidential_cluster_cr.yaml  confidential_cluster_crd.yaml  operator.yaml
docs/design/: boot-attestation.md  reference-values.md
examples/: vm-coreos-ign.yaml
kind/: config.yaml  kbs-forward.yaml  register-forward.yaml
lib/: Cargo.toml
lib/src/: conditions.rs  kopium.rs  lib.rs  reference_values.rs
manifest-gen/: Cargo.toml
manifest-gen/src/: main.rs
operator/: Cargo.toml
operator/src/: as-config.json  conditions.rs  kbs-config.toml  lib.rs  macros.rs  main.rs  mock_client.rs  reference-values-in.json  reference_values.rs  register_server.rs  rvps-config.json  tpm.rego  trustee.rs
register-server/: Cargo.toml  Containerfile
register-server/src/: main.rs
rv-store/: Cargo.toml
rv-store/src/: lib.rs
scripts/: clean-cluster-kind.sh  common.sh  create-cluster-kind.sh  delete-cluster-kind.sh  install-kubevirt.sh  install-trustee.sh  kubeconfig.sh
test_utils/: Cargo.toml
test_utils/src/: lib.rs
tests/: Cargo.toml  README.md  attestation.rs  confidential_cluster.rs  trusted_execution_cluster.rs
tests/common/: mod.rs  reference_values.rs  timer.rs
