[workspace]
members = ["compute-pcrs", "crds", "manifest-gen", "operator"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.41", features = ["derive"] }
env_logger = "0.11.8"
k8s-openapi = { version = "0.25.0", features = ["v1_33"] }
kube = { version = "1.1.0", features = ["derive", "runtime"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
