[workspace]
members = ["compute-pcrs", "crds", "manifest-gen", "operator", "rv-store"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
compute-pcrs-lib = { git = "https://github.com/confidential-clusters/compute-pcrs" }
env_logger = "0.11.8"
k8s-openapi = { version = "0.26.0", features = ["v1_33"] }
kube = { version = "2.0.1", features = ["derive", "runtime"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
