# SPDX-FileCopyrightText: Alice Frosi <afrosi@redhat.com>
# SPDX-FileCopyrightText: Jakob Naucke <jnaucke@redhat.com>
#
# SPDX-License-Identifier: CC0-1.0

[workspace]
members = ["compute-pcrs", "crds", "manifest-gen", "operator", "register-server", "rv-store"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.49", features = ["derive"] }
clevis-pin-trustee-lib = { git = "https://github.com/latchset/clevis-pin-trustee" }
compute-pcrs-lib = { git = "https://github.com/confidential-clusters/compute-pcrs" }
env_logger = "0.11.8"
k8s-openapi = { version = "0.26.0", features = ["v1_33"] }
kube = { version = "2.0.1", features = ["derive", "runtime"] }
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
