[package]
name = "compute-pcrs"
version = "0.1.0"
edition.workspace = true
description = "A cocl-operator optimized compute-pcrs interface"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
crds = { path = "../crds" }
compute-pcrs-lib.workspace = true
k8s-openapi.workspace =true
kube.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
