[package]
name = "compute-pcrs"
version = "0.1.0"
edition.workspace = true
description = "A cocl-operator optimized compute-pcrs interface"

[dependencies]
anyhow.workspace = true
chrono = "0.4.41"
clap.workspace = true
compute-pcrs-lib = { git = "https://github.com/confidential-clusters/compute-pcrs", version = "0.1.0" }
k8s-openapi.workspace = true
kube.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
