[package]
name = "compute-pcrs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "A cocl-operator optimized compute-pcrs interface"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
compute-pcrs-lib.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
rv-store = { path = "../rv-store" }
serde_json.workspace = true
tokio.workspace = true
