# SPDX-FileCopyrightText: Alice Frosi <afrosi@redhat.com>
# SPDX-FileCopyrightText: Jakob Naucke <jnaucke@redhat.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "crds"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
kube-derive = "2.0.1"
schemars = "1.0.5"
serde.workspace = true
serde_json.workspace = true
