[package]
name = "manifest-gen"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
clap = { version = "4.5.41", features = ["derive"] }
crds = { path = "../crds" }
k8s-openapi.workspace = true
kube = { workspace = true, features = ["derive"] }
log.workspace = true
serde_yaml = "0.9"
