[package]
name = "manifest-gen"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
crds = { path = "../crds" }
env_logger.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
log.workspace = true
serde_yaml = "0.9"
