# SPDX-FileCopyrightText: Alice Frosi <afrosi@redhat.com>
# SPDX-FileCopyrightText: Jakob Naucke <jnaucke@redhat.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "manifest-gen"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
crds = { path = "../crds" }
env_logger.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
log.workspace = true
serde_yaml = "0.9"
