[package]
name = "operator"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
crds = { path = "../crds" }
env_logger.workspace = true
futures-util = "0.3.31"
json-patch = "4.0.0"
jsonptr = "0.7.1"
k8s-openapi.workspace = true
kube.workspace = true
log.workspace = true
openssl = "0.10.73"
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0.12"
tokio.workspace = true
