[package]
name = "operator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
chrono.workspace = true
compute-pcrs-lib.workspace = true
crds = { path = "../crds" }
env_logger.workspace = true
futures-util = "0.3.31"
hex = "0.4.3"
json-patch = "4.1.0"
jsonptr = "0.7.1"
k8s-openapi.workspace = true
kube.workspace = true
log.workspace = true
oci-client = "0.15.0"
oci-spec = "0.8.2"
openssl = "0.10.73"
rv-store = { path = "../rv-store" }
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0.16"
tokio.workspace = true

[dev-dependencies]
http = "1.1.0"
tower = { version = "0.4.13", features = ["full"] }
# Ensure tokio test features are enabled for async tests
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
