[package]
name = "register-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
kube = { version = "1.1.0", features = ["runtime"] }
k8s-openapi = "0.25.0"
crds = { path = "../crds" }
log = "0.4"
env_logger = "0.11"