# SPDX-FileCopyrightText: Alice Frosi <afrosi@redhat.com>
# SPDX-FileCopyrightText: Jakob Naucke <jnaucke@redhat.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "rv-store"
version = "0.1.0"
description = "Reference values store definition for operator and compute-pcrs"
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
compute-pcrs-lib.workspace = true
serde.workspace = true
