# SPDX-FileCopyrightText: Alice Frosi <afrosi@redhat.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "cocl-operator-test-utils"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
cocl-operator-lib = { path = "../lib" }
compute-pcrs-lib.workspace = true
env_logger.workspace = true
k8s-openapi.workspace = true
kube = { workspace = true }
log.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio = { workspace = true, features = ["process"] }
uuid.workspace = true
