# SPDX-FileCopyrightText: Alice Frosi <afrosi@redhat.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "cocl-operator-integration-tests"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
virtualization = []

[dependencies]
anyhow.workspace = true
compute-pcrs-lib.workspace = true
crds = { path = "../crds" }
env_logger.workspace = true
k8s-openapi.workspace = true
kube = { workspace = true }
log.workspace = true
rand_core = "0.6"
rv-store = { path = "../rv-store" }
serde_json.workspace = true
ssh-key = { version = "0.6", features = ["rsa", "std"] }
tokio = { workspace = true, features = ["process"] }
uuid.workspace = true

[[test]]
name = "confidential_cluster"
path = "confidential_cluster.rs"

[[test]]
name = "attestation"
path = "attestation.rs"
